# family-ledger

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  export-ledger  generate_icons.py  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  google-sheets.yml  mobile-release.yml  mobile.yml
alembic/: env.py
alembic/versions/: 0001_initial_ledger_schema.py  0002_add_importer_table.py  0002_rename_ledger_name_to_account_name.py  0003_add_posting_narration.py  0003_fingerprint_non_unique.py  0004_add_issues.py  0004_drop_fingerprint_from_transactions.py  0005_simplify_importer_table.py  0006_add_attachments_table.py  0007_attachment_unique_constraint.py  0008_attachment_pending_upload_status.py  0009_doctor_query_indexes.py  0010_add_commodity_ticker.py  0011_add_transaction_tags.py  0012_transaction_source_ids.py  0013_transaction_import_timestamp.py
archive/docs/: README.md  compatibility-target-v0.1.md  developer-guidelines-v0.1.md  requirements-v0.1.md
clients/google-sheets/: .claspignore  AConstants.js  AEntity.js  A_Constants.js  A_Entity.js  Account.js  AccountSearch.html  Accounts.js  AccountsSheet.js  Api.js  ApiClient.js  ApiSettingsDialog.html  App.js  Attachment.js  Balance.js  BalancesSheet.js  BulkActionSidebar.html  Code.js  Commodity.js  Constants.js  CreateReportDialog.html  Decimal.js  Doctor.js  DoctorIssues.js  EditSidebar.html  Entity.js  FilterSidebar.html  Filters.js  ImportDialog.html  ImporterDialog.html  ImporterDialog.js  ImporterDialogs.js  Layout.js  LedgerSync.js  Perf.js  (+24 more)
config/: ledger.yaml
docker/: entrypoint.sh
docs/: README.md  account-balance-v0.2.md  api-v0.1.md  beancount-import-bootstrap-v0.1.md  compatibility-target-v0.1.md  developer-guidelines-v0.1.md  domain-model-v0.1.md  modular-import-system-v0.1.md  requirements-v0.1.md  roadmap-v0.1.md  roadmap.md  synology-deployment.md
importers/: pyproject.toml
importers/src/family_ledger_importers/: beancount.py  ibkr.py  mt940.py  prices.py  utils.py  viseca.py  zkb_pdf.py  zkb_utils.py
importers/tests/: conftest.py  test_beancount.py  test_ibkr.py  test_mt940.py  test_prices.py  test_viseca.py  test_zkb_pdf.py
importers/tests/fixtures/: mt940_family_subset_expected.json
scripts/: __init__.py  bootstrap_demo.py  import_beancount.py
tests/: api_helpers.py  conftest.py  query_helpers.py  test_api_accounts.py  test_api_attachments.py  test_api_balance_assertions.py  test_api_commodities.py  test_api_importer.py  test_api_ledger.py  test_api_prices.py  test_api_query.py  test_api_transactions.py  test_db.py  test_export_beancount.py  test_health.py  test_importers_base.py  test_importers_registry.py  test_schema.py  test_services_account_balance.py  test_services_accounts.py  test_services_attachments.py  test_services_balancing.py  test_services_booking.py  test_services_commodities.py  test_services_doctor.py  test_services_ledger.py  test_services_normalization.py  test_services_pagination.py  test_services_paperless.py  test_services_prices.py  test_services_query_compiler.py  test_services_query_executor.py  test_services_query_injection.py  test_services_query_parser.py  test_services_transaction_balancing.py  test_services_transactions.py  test_services_validation.py  test_startup.py
(+245 files in other folders)
