[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-ledger"
version = "0.1.0"
description = "DB-backed, API-first family accounting platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "jsonschema>=4.0,<5.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
  "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.39,<2.0",
  "family-ledger-importers",
  "httpx>=0.27,<1.0",
  "pre-commit>=4.5,<5.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.15,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "importers/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
]

[tool.uv.sources]
family-ledger-importers = { path = "importers" }
