[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-ledger-importers"
version = "0.1.0"
description = "Importer implementations for family-ledger"
requires-python = ">=3.12"
dependencies = [
  "beancount>=3.2.0",
  "family-ledger",
]

[project.entry-points."family_ledger.importers"]
beancount = "family_ledger_importers.beancount:BeancountImporter"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
