[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-ledger-importers"
version = "0.1.0"
description = "Importer implementations for family-ledger"
requires-python = ">=3.12"
dependencies = [
  "beancount>=3.2.0",
  "camelot-py>=0.11",
  "family-ledger",
  "ibflex>=1.1",
  "mt-940>=4.30,<5.0",
  "requests>=2.0",
]

[project.entry-points."family_ledger.importers"]
beancount = "family_ledger_importers.beancount:BeancountImporter"
ibkr = "family_ledger_importers.ibkr:IbkrImporter"
mt940 = "family_ledger_importers.mt940:Mt940Importer"
viseca = "family_ledger_importers.viseca:VisecaImporter"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
